<resources>
    <string name="app_name">MPDTracker</string>
    <string name="number_of_days">Number of Days</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="medicine_start_date">Medicine Start Date</string>
    <string name="medicine_photo">Medicine Photo</string>
    <string name="time_of_day">Time Of Day</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="take_photo">Take Photo</string>
    <string name="channel_name">Medicine Alerts</string>
    <string name="channel_description">A notification channel created with DEFAULT importance to notify medicine dosage time to time.</string>
</resources>