<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <!--<androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/colorPrimary"
                            android:minHeight="?attr/actionBarSize"
                            android:theme="?attr/actionBarTheme" />-->

                        <TextView
                            android:id="@+id/textView01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/medicine_name" />

                        <EditText
                            android:id="@+id/medicineNameTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:ems="10"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:minHeight="48dp" />

                        <TextView
                            android:id="@+id/textView02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/medicine_type" />

                        <Spinner
                            android:id="@+id/medicineTypeSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView03"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/medicine_start_date" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/startDateTV"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:ems="10"
                                    android:importantForAutofill="no"
                                    android:minHeight="48dp" />

                                <Button
                                    android:id="@+id/buttonPickDate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Pick Date" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView04"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/number_of_days" />

                        <EditText
                            android:id="@+id/numberOfDaysTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:ems="10"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minHeight="48dp" />

                        <TextView
                            android:id="@+id/textView05"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/time_of_day" />

                        <com.google.android.material.chip.ChipGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp">

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/chipMorning"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/morning" />

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/chipAfternoon"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/afternoon" />

                                <com.google.android.material.chip.Chip
                                    android:id="@+id/chipNight"
                                    style="@style/Widget.MaterialComponents.Chip.Filter"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/night" />

                        </com.google.android.material.chip.ChipGroup>

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/medicine_photo" />

                        <ImageView
                            android:id="@+id/medincinePhoto1"
                            android:layout_width="200dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            tools:ignore="ImageContrastCheck" />

                        <Button
                            android:id="@+id/cameraButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/take_photo" />

                        <Button
                            android:id="@+id/buttonSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill_horizontal"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/submit" />

                        <Button
                            android:id="@+id/buttonClear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill_horizontal"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/clear" />

                </LinearLayout>
        </ScrollView>

        <!--<DatePicker android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>-->


</LinearLayout>